# custom-sdr-ftdi-tester

./: .gitignore  .gitmodules  CMakeLists.txt  log77 bringup.txt.xlsx
custom-sdr-afe77xx-lib/: CMakeLists.txt
custom-sdr-afe77xx-lib/include/: afe77xx.h
custom-sdr-afe77xx-lib/src/: Afe77xxKeyCFunctions.c  DeviceBase.h  ftdi_wrapper.cpp  ftdi_wrapper.h  helperFunctions.cpp  helperFunctions.h  interface.cpp  interface.h
custom-sdr-ftdi-lib/: CMakeLists.txt
custom-sdr-ftdi-lib/include/: ftdi.h  i2c.h
custom-sdr-ftdi-lib/src/: ftdi_infra.c  ftdi_infra.h
libs/custom-sdr-ftdi-lib/: CMakeLists.txt
libs/custom-sdr-ftdi-lib/include/: ftdi.h  spi.h
libs/custom-sdr-ftdi-lib/include/ftd2xx/: ftd2xx.h
libs/custom-sdr-ftdi-lib/src/: ftdi_i2c.c  ftdi_mid.c  ftdi_spi.c
src/: AbstractAccessor.hpp  Afe7769FtdiAccessor.cpp  Afe7769FtdiAccessor.hpp  Afe77xxFtdiAccessor.cpp  Afe77xxFtdiAccessor.hpp  FtdiDeviceInfoList.cpp  FtdiDeviceInfoList.hpp  FtdiSpiAccessProvider.cpp  FtdiSpiAccessProvider.hpp  FtdiSpiMemoryAccessor.cpp  FtdiSpiMemoryAccessor.hpp  Lmk04828Bringup.hpp  Lmk04828FtdiAccessor.cpp  Lmk04828FtdiAccessor.hpp  Lmk04828InitRegisters.hpp  Lmk04828InitRegs.hpp  Lmk04828SetupRegisters.hpp  Lmk4828FtdiAccessor.cpp  Lmk4828FtdiAccessor.hpp  Lmk4828InitRegisters.hpp  MemoryPartTypes.hpp  PllConfig.cpp  PllConfig.hpp  PllSystemDeviceParam.cpp  PllSystemDeviceParam.hpp  RficSystemDeviceParam.cpp  RficSystemDeviceParam.hpp  Settings.cpp  Settings.hpp  Utilits.cpp  Utilits.hpp  main.cpp  output_file.txt
src/custom-sdr-parts/accessors/: AbstractAccessor.hpp  AbstractSpiBackend.cpp  AbstractSpiBackend.hpp  Afe7769Accessor.cpp  Afe7769Accessor.hpp  Lmk4828FtdiAccessor.cpp  Lmk4828FtdiAccessor.hpp  NativeSpiBackend.cpp  NativeSpiBackend.hpp
src/custom-sdr-parts/common/: Afe7769RficTypes.hpp  Debug.hpp  PllSystemDeviceParam.cpp  PllSystemDeviceParam.hpp  Settings.cpp  Settings.hpp  Utilits.cpp
src/custom-sdr-parts/generic-ftdi/: FtdiSpiAccessProvider.cpp  FtdiSpiAccessProvider.hpp
